@@ -33,6 +33,7 @@ Included
 - Invalid `WEFTEND_360_SAFE_RUN_ADAPTER` values now fail closed inside verify corridor and still emit fail receipts/reports (`VERIFY360_SAFE_RUN_ADAPTER_INVALID`), preserving evidence-first behavior.
 - `verify:360:harness` now covers invalid adapter override failure path and verifies pointer non-advance + receipt/report persistence.
 - Added Green Team workflow contract test for `.github/workflows/weftend_artifact_meter.yml` to enforce analysis-only (`--withhold-exec`) and bounded artifact-output workflow invariants in test/proofcheck loops.
+- Added Green Team managed-release-helper contract test for `scripts/verify_360_release_managed.js` to pin strict preflight semantics and prevent adapter-disable env leakage into full verify runs.
 - Emergency verify report path now preserves policy context lines (`policy.*`) so fail-closed receipts remain operator-readable under write-path fallback.
 - Safe-run now enforces a non-blocking evidence corridor check before completion:
 - Expected receipt artifacts are verified for presence and digest consistency.
